--- a/Views/Book/GetAll.cshtml
+++ b/Views/Book/GetAll.cshtml
@@ -35,8 +35,8 @@
                             <td>@item.AuthorName</td>
                             <td>@item.PublisherName</td>
                             <td>
-                                <a class="btn btn-success" href="/Book/Update?id=@item.Id"><i class="bi bi-pen"></i></a> |
-                                <a class="btn btn-danger" onclick="return window.confirm('Are you sure?')" href="/Book/Delete?id=@item.Id"><i class="bi bi-trash"></i></a>
+                                <a class="btn btn-success" href="/Book/Update?id=@item.Id"><i class="bi bi-pen"></i>Edit</a> |
+                                <a class="btn btn-danger" onclick="return window.confirm('Are you sure?')" href="/Book/Delete?id=@item.Id"><i class="bi bi-trash"></i>Delete</a>
                             </td>
                         </tr>
                     }
